Set min height for empty list and fix visibility of template

--- a/styles/style.css
+++ b/styles/style.css
@@ -16,8 +16,8 @@ a {
 }
 
 input {
-    font-size: 2rem;
-    line-height: 1rem;
+    font-size: 2em;
+    line-height: 1em;
     padding: 5px;
 }
 
@@ -92,7 +92,7 @@ header h1 {
     padding-bottom: 20px;
     padding-left: 30px;
     padding-right: 30px;
-
+    min-height: 300px;
 }
 
 .list .item {
@@ -238,7 +238,7 @@ header h1 {
 }
 
 #template-item {
-    visibility: hidden;
+    display: none;
 }
 
 @media only screen
